src/objects/Time_Donation__c.object
<CustomObject>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <inlineHelpText>Enter the name of the Customer you are assisting here</inlineHelpText>
        <label>Customer/Group Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Request__c</fullName>
        <label>Customer Request</label>
        <referenceTo>Customer_Requests__c</referenceTo>
        <relationshipLabel>Time Donations</relationshipLabel>
        <relationshipName>Time_Donations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number_of_Individuals__c</fullName>
        <formula>IF( RecordType.DeveloperName = &quot;Individual_Time_Donation&quot;, 1, IF(  Number_of_People_in_Group__c &lt;&gt; 0,  Number_of_People_in_Group__c , 0) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Individuals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_People_in_Group__c</fullName>
        <inlineHelpText>Enter the total number of customers in the group</inlineHelpText>
        <label>Number of People in Group</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Hours_Donated__c</fullName>
        <inlineHelpText>Shows the Total Number of Hours Donated for this Time Donation</inlineHelpText>
        <label>Total Hours Donated</label>
        <summarizedField>Time_Donation_Entry__c.Time_Donated_in_Hours__c</summarizedField>
        <summaryForeignKey>Time_Donation_Entry__c.TIme_Donation__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Volunteer_Name__c</fullName>
        <label>Volunteer Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Time Donations</relationshipLabel>
        <relationshipName>Time_Donations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Volunteer_Role__c</fullName>
        <label>Volunteer Role</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Time Donations</relationshipLabel>
        <relationshipName>Time_Donations</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Time Donation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Volunteer_Role__c</columns>
        <columns>Volunteer_Name__c</columns>
        <columns>Customer_Name__c</columns>
        <columns>Number_of_Individuals__c</columns>
        <columns>Total_Hours_Donated__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>My_Time_Donations</fullName>
        <columns>NAME</columns>
        <columns>Volunteer_Role__c</columns>
        <columns>Volunteer_Name__c</columns>
        <columns>Customer_Name__c</columns>
        <columns>Number_of_Individuals__c</columns>
        <columns>Total_Hours_Donated__c</columns>
        <filterScope>Everything</filterScope>
        <label>My Time Donations</label>
    </listViews>
    <nameField>
        <label>Time Donation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Time Donations</pluralLabel>
    <recordTypes>
        <fullName>Group_Time_Donation</fullName>
        <active>true</active>
        <description>Use this record type to create Time Donations for Groups of Customers</description>
        <label>Group Customer Time Donation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Individual_Time_Donation</fullName>
        <active>true</active>
        <description>Use this record type to create Time Donations for Individuals</description>
        <label>Individual Customer Time Donation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Non_Customer_Time_Donation</fullName>
        <active>true</active>
        <description>Use this record type to create Non-Customer Time Donations</description>
        <label>Non-Customer Time Donation</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>